--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ffmpeg/core": "^0.12.6",
+    "@ffmpeg/ffmpeg": "^0.11.6",
+    "@types/node": "^20.14.5",
     "@types/uuid": "^9.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
