--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "@angular/cli": "~14.2.1",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "3.3.2",
     "tailwindcss": "^3.2.4",
     "typescript": "~4.7.2"
   }
