--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
     "@angular-devkit/build-angular": "^14.2.1",
     "@angular/cli": "~14.2.1",
     "@angular/compiler-cli": "^14.0.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.6.0",
     "@types/jasmine": "~4.0.0",
+    "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.7.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -42,6 +46,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "3.3.2",
     "tailwindcss": "^3.2.4",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "typescript-eslint": "^7.15.0"
   }
 }
