--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ffmpeg/ffmpeg": "^0.11.6",
     "@types/node": "^20.14.5",
     "@types/uuid": "^9.0.2",
+    "@types/video.js": "^7.3.58",
+    "@videojs/themes": "^1.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
@@ -47,6 +49,7 @@
     "prettier": "3.3.2",
     "tailwindcss": "^3.2.4",
     "typescript": "~4.7.2",
-    "typescript-eslint": "^7.15.0"
+    "typescript-eslint": "^7.15.0",
+    "video.js": "^8.12.0"
   }
 }
