--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +38,7 @@
     "@angular-devkit/build-angular": "^14.2.1",
     "@angular/cli": "~14.2.1",
     "@angular/compiler-cli": "^14.0.0",
+    "@cypress/schematic": "^2.5.2",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.6.0",
     "@types/jasmine": "~4.0.0",
@@ -50,6 +54,7 @@
     "tailwindcss": "^3.2.4",
     "typescript": "~4.7.2",
     "typescript-eslint": "^7.15.0",
-    "video.js": "^8.12.0"
+    "video.js": "^8.12.0",
+    "cypress": "latest"
   }
 }
